[project]
  name = "pulumi_astronomer"
  description = "A Pulumi package for creating and managing Astronomer Cloud resources"
  dependencies = ["parver>=0.2.1", "pulumi>=3.0.0,<4.0.0", "semver>=2.8.1", "typing-extensions>=4.11,<5; python_version < \"3.11\""]
  keywords = ["pulumi", "astronomer", "category/infrastructure"]
  readme = "README.md"
  requires-python = ">=3.9"
  version = "0.0.0"
  [project.license]
    text = "Apache-2.0"
  [project.urls]
    Homepage = "https://github.com/ryan-pip/pulumi-astronomer"
    Repository = "https://github.com/ryan-pip/pulumi-astronomer"

[build-system]
  requires = ["setuptools>=61.0"]
  build-backend = "setuptools.build_meta"

[tool]
  [tool.setuptools]
    [tool.setuptools.package-data]
      pulumi_astronomer = ["py.typed", "pulumi-plugin.json"]
